Bug 1055818 - Fix findReferences-02.js to account for the nulling out of binding BaseShape parents in bug 961969.  r=luke